@@ -1,3 +1,8 @@
+2007-10-03  Marcus Brinkmann  <marcus@g10code.de>
+
+	* client.cc (percent_escape, escape): New functions.
+	(client_t::call_assuan): Fix INPUT command.
+
 2007-09-21  Werner Koch  <wk@g10code.com>
 
 	* registry.c (default_homedir): Make registry works.  Reported by
